# swechats

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
artifacts/: candidate-pushbacks-all.jsonl  candidate-pushbacks-entireio-cli.jsonl  eval-cases-entireio-cli.jsonl  filtered-smoke.jsonl
docs/: HACKATHON_CTX.md  MEMORY_METHOD.md  REPLAY_METHOD.md  og_convo.md  swe-chat-paper.md  system_def.md
src/swechats/: __init__.py  candidate_filter.py  cases.py  cli.py  corpus_audit.py  data.py  dspysigs.py  export.py  memory_sigs.py  native_state.py  paths.py  replay.py  smoke.py
src/swechats/dataset/: __init__.py  paths.py
src/swechats/eval/: cases.py
tests/: test_candidate_filter.py  test_dspysigs.py  test_replay.py  test_smoke.py
web/: .cta.json  .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.js  package.json  tsconfig.json
web/src/: styles.css
web/src/components/: formula-block.tsx
web/src/components/ai-elements/: agent.tsx  code-block.tsx  commit.tsx  conversation.tsx  file-tree.tsx  message.tsx  package-info.tsx  reasoning.tsx  sandbox.tsx  shimmer.tsx  snippet.tsx  stack-trace.tsx  terminal.tsx  test-results.tsx  tool.tsx
web/src/components/ui/: accordion.tsx  badge.tsx  button-group.tsx  checkbox.tsx  input-group.tsx  select.tsx  tabs.tsx  toggle-group.tsx  toggle.tsx
web/src/lib/: eval-formulas.test.ts  eval-formulas.ts  streamdown-plugins.ts
web/src/lib/swechat/: schema.test.ts  schema.ts  specimen-loader.functions.ts  specimens.ts  workbench-filters.test.ts  workbench-filters.ts
web/src/routes/: __root.tsx  index.tsx
