[project]
name = "swechats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Darin Kishore", email = "darinkishore@protonmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.scripts]
swechats = "swechats.cli:app"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
