[project]
name = "swechats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Darin Kishore", email = "darinkishore@protonmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.107.0",
    "dspy>=3.2.1",
    "httpx>=0.28.1",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "rich>=14.0.0",
    "structlog>=26.1.0",
    "typer>=0.16.0",
    "wandb>=0.27.2",
    "weave>=0.52.42",
]

[project.scripts]
swechats = "swechats.cli:app"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
